[package]
name = "askJira"
version = "0.0.6"
edition = "2021"
authors = ["kiraum <tfgoncalves@xpto.it>"]

[dependencies]
base64 = "0.13.0"
simple_logger = "4.3.0"
futures = "0.3.28"
indicatif = "0.16"
log = "0.4"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
serde_json = "1.0.96"
argh = "0.1.12"
tokio = { version = "1.28.2", features = ["full"] }
