[package]
name = "askJira"
version = "0.0.6"
edition = "2021"
authors = ["kiraum <tfgoncalves@xpto.it>"]

[dependencies]
base64 = "0.13.1"
simple_logger = "4.3.3"
futures = "0.3.31"
indicatif = "0.16"
log = "0.4"
reqwest = { version = "0.12.14", features = ["json", "stream"] }
serde_json = "1.0.138"
argh = "0.1.13"
tokio = { version = "1.43.0", features = ["full"] }
